--- a/PianoDiProgetto/sections/obs.tex
+++ b/PianoDiProgetto/sections/obs.tex
@@ -2,7 +2,7 @@ L\textquoteright{}Organizational Breakdown Structure, abbreviata in OBS, \`{e} u
 
 \begin{figure}[H]
 \centering % per centrare l'immagine (opzionale)
-\includegraphics[scale=0.5]{img/Progetto2.jpg}
+\includegraphics[scale=0.5]{img/Progetto2.png}
 \caption{Diagramma OBS}
 \label{fig:Diagramma OBS}
 \end{figure}
