--- a/PianoDiProgetto/sections/rbs.tex
+++ b/PianoDiProgetto/sections/rbs.tex
@@ -9,3 +9,9 @@ di ottimizzare l'impiego di ogni singola risorsa necessaria, inoltre la RBS risu
 legata alla stima dei costi in quanto questi vengono generati in base all'impiego delle
 risorse descritte.
 
+\begin{figure}[H]
+\centering % per centrare l'immagine (opzionale)
+\includegraphics[scale=0.4]{img/Risorse_rbs.png}
+\caption{Grafico RBS}
+\label{fig:Grafico RBS}
+\end{figure}
