--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -55,6 +55,45 @@ sommare i costi di mantenimento e hosting del servizio.
 \label{fig:Diagramma Attivit\'a}
 \end{center}
 \end{figure}
+
+\newpage
+
+\paragraph{Riepilogo Conto economico costi attivit\`{a}}
+
+\begin{center}
+\begin{longtable}[H]{|>{\centering}p{3.9cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}|}
+    \hline
+    \multicolumn{1}{|c|}{\textbf{Attivit\`{a}}} &
+    \multicolumn{1}{c|}{\textbf{Data inizio}} &
+    \multicolumn{1}{c|}{\textbf{Data fine}} &
+    \multicolumn{1}{c|}{\textbf{Durata(gg)}} &
+    \multicolumn{1}{c|}{\textbf{Ore previste}} &
+    \multicolumn{1}{c|}{\textbf{Costo(\euro)}} \\ %\tabularnewline 
+      \hline
+		Definizione Concept & 03/06/2013 & 11/06/2013 & 7 & 37 & 270 \tabularnewline \hline
+		Studio di fattibilit\`{a} & 12/06/2013 & 14/06/2013 & 3 & 47 & 1234 \tabularnewline \hline
+		Pianificazione & 17/06/2013 & 21/06/2013 & 5 & 32 & 1025 \tabularnewline \hline
+		Analisi e Progettazione & 24/06/2013 & 27/08/2013 & 47 & 163 & 4002 \tabularnewline \hline
+		Sviluppo & 28/08/2013 & 02/10/2013 & 26 & 352 & 7330 \tabularnewline \hline
+		Test & 11/09/2013 & 16/10/2013 & 26 & 155 & 3010 \tabularnewline \hline
+		Post vendita & 28/08/2013 & 31/10/2013 & 47 & 184 & 4135 \tabularnewline \hline
+		Commercializzazione & 17/10/2013 & 31/10/2013 & 11 & 35 & 1045 \tabularnewline \hline
+\end{longtable}
+\end{center}
+
+\par
+\par
+\par
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.45]{img/MileProgetto.png}
+\caption{Grafico di riepilogo Costi e Durate}
+\label{fig:Grafico di riepilogo Costi e Durate}
+\end{center}
+\end{figure}
+\newpage
+
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=1\textwidth]{img/Gantt.jpg}
