Ho rotto i coglioni

--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -56,9 +56,16 @@ sommare i costi di mantenimento e hosting del servizio.
 \end{center}
 \end{figure}
 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=1\textwidth]{img/Gantt.jpg}
+\caption{Gantt Progetto}
+\label{fig:Gantt Progetto}
+\end{center}
+\end{figure}
 \newpage
 
-\paragraph{Riepilogo Conto economico costi attivit\`{a}}
+\paragraph{Riepilogo stato economico delle attivit\`{a}}
 
 \begin{center}
 \begin{longtable}[H]{|>{\centering}p{3.9cm}| >{\centering}m{2cm}| >{\centering}m{2cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}| >{\centering}p{0.6cm}|}
@@ -90,15 +97,6 @@ sommare i costi di mantenimento e hosting del servizio.
 \includegraphics[scale=0.45]{img/MileProgetto.png}
 \caption{Grafico di riepilogo Costi e Durate}
 \label{fig:Grafico di riepilogo Costi e Durate}
-\end{center}
-\end{figure}
-\newpage
-
-\begin{figure}[H]
-\begin{center}
-\includegraphics[width=1\textwidth]{img/Gantt.jpg}
-\caption{Gantt Progetto}
-\label{fig:Gantt Progetto}
 \end{center}
 \end{figure}
 \newpage
