Ho rotto tanto i coglioni

--- a/PianoDiProgetto/sections/legale.tex
+++ b/PianoDiProgetto/sections/legale.tex
@@ -19,7 +19,7 @@ La nostra esperienza ha mostrato che la registrazione di un marchio, cioè una p
 \item registrazione di un marchio dal segno ``in bianco/nero'', così da tutelare per tutti i colori o loro combinazioni da attribuire al nostro marchio;
 \item indicazione dell'appartenenza del marchio alla classe di servizi (n. 42) ``Servizi nell'ambito della scienza e della tecnologia, come servizi di ricerca e di sviluppo relativi a ciò, analisi e ricerche industriali, progettazione e sviluppo di computer, consulenza e assistenza legale.''
 \item registrazione di un marchio internazionale, (valido nei Paesi che hanno aderito agli inerenti accordi internazionali), piuttosto che nazionale ovvero valido solo nel nostro Paese, o  comunitario (efficace nei Paesi appartenenti all'Unione Europea). Questa scelta è stata dettata dal fatto che il servizio che forniremo attraverso un'applicazione web potrebbe trovare concorrenza e quindi necessitare di tutela in ambito internazionale, visto anche che verrà rilasciato in più lingue, dunque sarebbe un errore non stendere la protezione territoriale mediante un marchio internazionale.
-I marchi che il team dovrà provvedere a registrare sono: \textit{Malla5} e \textit{Mail2you}. Le somme previste per ogni marchio, comprensive di tasse, onorari e tutela dei diritti per 10 anni sono pari a 2000\officialeuro.
+I marchi che il team dovrà provvedere a registrare sono: \textit{Malla5} e \textit{Mail4You}. Le somme previste per ogni marchio, comprensive di tasse, onorari e tutela dei diritti per 10 anni sono pari a 2000\officialeuro.
 \end{itemize}
 
 \subsubsection{Design}
