revisione wbs e obs, modificata struttura file e inseriti nuovi loghi

--- a/PianoDiProgetto/sections/obs.tex
+++ b/PianoDiProgetto/sections/obs.tex
@@ -12,7 +12,7 @@ coordinando le risorse per assicurare il conseguimento degli obbiettivi, anche i
 circostanze inaspettate.
 \end{itemize}
 
-\subsubsection{Responsabile costumer care}
+\subsubsection{Responsabile customer care}
 Il RCC deve:
 \begin{itemize}
 \item scegliere le modalit\`{a} con cui gli utenti possono comunicare all\textquoteright{}azienda;
@@ -27,7 +27,7 @@ riscontrate dai clienti o con i mezzi di comunicazione e i servizi adottati.
 Il RQ ha il compito di definire gli standard di qualit\`{a} da rispettare per ogni singolo processo
 svolto dall\textquoteright{}azienda e di promuovere il miglioramento dei processi in corso di sviluppo.
 Si attiene strettamente alle normative in materia di qualit\`{a} (ISO 9000/9001/9004
-e ISO 9126 relativamente alla qualit\`{a} del software) e, a seguito dell\textquoteright{} analisi dei singoli
+e ISO 9126 relativamente alla qualit\`{a} del software) e, a seguito dell\textquoteright{}analisi dei singoli
 processi, promuove azioni di miglioramento, sia attraverso comunicazioni interne all\textquoteright{}azienda,
 che attraverso formazione specifica degli addetti. Il miglioramento continuo
 della qualit\`{a} aziendale, seguendo le linee guida del CMMI\footnote{Capability Maturity Model Integration - \url{http://it.wikipedia.org/wiki/Capability\_Maturity\_Model}}, garantisce all\textquoteright{}azienda un
