--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -58,18 +58,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] idee, critiche e specifiche provenienti da un brainstorming di gruppo.
 \item[Output:] documento formale che descrive una prima versione della specifica del prodotto, nella quale si definisce dettagliatamente l'idea che si vuole realizzare.
-\item[Attività:]
-\begin{center}
-\begin{itemize}
-\item ricerca nel web di eventuali competitors per ricavare da progetti già esistenti quali funzionalità è bene riproporre, quali no e quali sono quelle innovative che bisogna sviluppare;
-\item brainstorming tra le risorse umane assegnate al WP per identificare caratteristiche da implementare nel prodotto;
-\item prima stesura documento;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 270 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item ricerca nel web di eventuali competitors per ricavare da progetti già esistenti quali funzionalità è bene riproporre, quali no e quali sono quelle innovative che bisogna sviluppare;
+	\item brainstorming tra le risorse umane assegnate al WP per identificare caratteristiche da implementare nel prodotto;
+	\item prima stesura documento;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 270 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
@@ -79,18 +77,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] documento di specifiche di massima prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio le funzionalità base che si è deciso di sviluppare.
-\item[Attività:]
-\begin{center}
-\begin{itemize}
-\item studio del documento prodotto dal WP;
-\item analisi tecnica di sistemi simili già esistenti;
-\item prima stesura del documento;
-\item verifica del documento ed eventuali correzioni;
-\item formalizzazione del documento;
-\item approvazione.
-\end{itemize}
-\end{center}
-\item[Costo:] 385 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio del documento prodotto dal WP;
+	\item analisi tecnica di sistemi simili già esistenti;
+	\item prima stesura del documento;
+	\item verifica del documento ed eventuali correzioni;
+	\item formalizzazione del documento;
+	\item approvazione.
+	\end{itemize}
+\item[Costo:] 385 \euro{}
 \item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
@@ -100,18 +96,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] documento di specifiche di funzionalità prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio eventuali nuove tecnologie interessanti che potrebbero essere inserite nel progetto. Per ciascuna di queste viene riportata una stima di tempo che si presuppone sia necessario ai programmatori per arrivare ad averne una buona padronanza.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio del documento prodotto dal WP;
-\item analisi mirata di eventuali nuove tecnologie e stima delle ore per l'apprendimento;
-\item prima stesura documento;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione.
-\end{itemize}
-\end{center}
-\item[Costo:] 558 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio del documento prodotto dal WP;
+	\item analisi mirata di eventuali nuove tecnologie e stima delle ore per l'apprendimento;
+	\item prima stesura documento;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione.
+	\end{itemize}
+\item[Costo:] 558 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
@@ -121,20 +115,18 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] tutti i documenti prodotti dal secondo livello del WP.
 \item[Output:] documento che descrive nel dettaglio, in modo non ambiguo, la fattibilità tecnica per il prodotto che si vuole realizzare indicando le tecnologie e gli strumenti necessari per farlo.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio dei documenti prodotti dai WP;
-\item incontro fra responsabili i tecnici;
-\item valutazione dei sistemi e degli standard in uso;
-\item valutazione delle tecnologie;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 335 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio dei documenti prodotti dai WP;
+	\item incontro fra responsabili i tecnici;
+	\item valutazione dei sistemi e degli standard in uso;
+	\item valutazione delle tecnologie;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 335 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
@@ -144,18 +136,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] ricerche di mercato e dati riguardanti eventuali competitor.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista del marketing. Nel caso di una buona riuscita sono riportate anche le azioni da seguire per il rilascio del prodotto.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item analisi di mercato;
-\item interviste, sondaggi e dialoghi con possibili clienti;
-\item individuazione di eventuali strategie;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item analisi di mercato;
+	\item interviste, sondaggi e dialoghi con possibili clienti;
+	\item individuazione di eventuali strategie;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 319 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
@@ -166,18 +156,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:]
 \item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item definizione di un marchio;
-\item consulenza esterna legale;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 315 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item definizione di un marchio;
+	\item consulenza esterna legale;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 315 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
 
@@ -187,18 +175,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista economico. All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item consulenze economiche;
-\item stima dei costi, guadagni e gestione;
-\item ricerca di eventuali finanziatori;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item consulenze economiche;
+	\item stima dei costi, guadagni e gestione;
+	\item ricerca di eventuali finanziatori;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 265 \euro.
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
@@ -209,20 +195,18 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] politiche e standard di qualità, esperienze passate degli analisti.
 \item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualità al prodotto.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio degli standard esistenti;
-\item definizione degli obiettivi di qualità;
-\item pianificazione adattamento standard al progetto;
-\item definizione delle strategie di verifica e validazione del software;
-\item definizione delle norme di progetto;
-\item prima stesura documenti riassuntivi;
-\item verifica documenti ed eventuali correzioni;
-\item formalizzazione documenti;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio degli standard esistenti;
+	\item definizione degli obiettivi di qualità;
+	\item pianificazione adattamento standard al progetto;
+	\item definizione delle strategie di verifica e validazione del software;
+	\item definizione delle norme di progetto;
+	\item prima stesura documenti riassuntivi;
+	\item verifica documenti ed eventuali correzioni;
+	\item formalizzazione documenti;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 245 \euro{}
 \item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
@@ -234,19 +218,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all'interno del WP.
 \item[Output:] documento formale che indica gli eventuali rischi che si possono verificare durante le varie fasi di sviluppo del progetto.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item identificazione dei rischi noti;
-\item identificazione rischi dovuti alla tipologia del progetto;
-\item ricerca di soluzioni;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 255 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item identificazione dei rischi noti;
+	\item identificazione rischi dovuti alla tipologia del progetto;
+	\item ricerca di soluzioni;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 255 \euro{}
 \item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
@@ -256,16 +238,14 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] esperienze personali, specifiche di massima, analisi di fattibilità.
 \item[Output:] WBS,OBS,RBS, diagramma di Gantt.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item decisione del livello di profondità del WBS;
-\item definizione delle attività;
-\item identificazione dei ruoli necessari per lo svolgimento del progetto;
-\item assegnazione dei ruoli alle attività;
-\end{itemize}
-\end{center}
-\item[Costo:] 525 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item decisione del livello di profondità del WBS;
+	\item definizione delle attività;
+	\item identificazione dei ruoli necessari per lo svolgimento del progetto;
+	\item assegnazione dei ruoli alle attività;
+	\end{itemize}
+\item[Costo:] 525 \euro{}
 \item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
@@ -275,19 +255,17 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio dei documenti in input;
-\item riunione fra gli analisti;
-\item ricerca di soluzioni a problemi emersi durante l'incontro;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 445 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio dei documenti in input;
+	\item riunione fra gli analisti;
+	\item ricerca di soluzioni a problemi emersi durante l'incontro;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 445 \euro{}
 \item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
@@ -297,18 +275,16 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Responsabile:] 
 \item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale ad uso esterno Analisi dei Requisiti.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio dei documenti in input;
-\item riunione fra analisti;
-\item prima stesura documento riassuntivo;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 821 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio dei documenti in input;
+	\item riunione fra analisti;
+	\item prima stesura documento riassuntivo;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 821 \euro{}
 \item[Tempi di realizzazione:] 6 giorni lavorativi.
 \end{description}
 
@@ -320,18 +296,16 @@ specifica chiara, coesa e nei principi di qualità fissati a priori.
 \item[Input:] analisi dei requisiti, sistemi aziendali ed eventualmente componenti esistenti.
 \item[Output:] documento di specifica tecnica del prodotto che riassume l'architettura generale ed ad
 alto livello del software.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item incontri tra progettisti e analisti;
-\item analisi di componenti e sistemi esistenti;
-\item valutazione di essi per opportunità di riuso;
-\item identificazione componenti fondamentali;
-\item individuare le tecnologie e le tecniche da utilizzare;
-\item prima bozza di documenti e schemi, revisione, approvazione, formalizzazione finale.
-\end{itemize}
-\end{center}
-\item[Costo:] 976 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item incontri tra progettisti e analisti;
+	\item analisi di componenti e sistemi esistenti;
+	\item valutazione di essi per opportunità di riuso;
+	\item identificazione componenti fondamentali;
+	\item individuare le tecnologie e le tecniche da utilizzare;
+	\item prima bozza di documenti e schemi, revisione, approvazione, formalizzazione finale.
+	\end{itemize}
+\item[Costo:] 976 \euro{}
 \item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
 
@@ -341,18 +315,16 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] analisi dei requisiti, specifica tecnica.
 \item[Output:] documento di definizione del prodotto che descriva con linguaggio UML2.0 schemi e diagrammi di tutte le unità che devono essere realizzate.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item definizione e specifica dei moduli da realizzare
-\item raggruppare moduli in unità mantenendo basso accoppiamento e elevata coesione
-\item assegnare le unità ai componenti
-\item tracciamento componenti- requisiti
-\item stabilire i test di unità
-\item prima stesura del documento, revisione, approvazione, formalizzazione finale.
-\end{itemize}
-\end{center}
-\item[Costo:] 1405 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item definizione e specifica dei moduli da realizzare
+	\item raggruppare moduli in unità mantenendo basso accoppiamento e elevata coesione
+	\item assegnare le unità ai componenti
+	\item tracciamento componenti- requisiti
+	\item stabilire i test di unità
+	\item prima stesura del documento, revisione, approvazione, formalizzazione finale.
+	\end{itemize}
+\item[Costo:] 1405 \euro{}
 \item[Tempi di realizzazione:] 10 giorni lavorativi.
 \end{description}
 
@@ -362,17 +334,15 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] specifica tecnica, definizione di prodotto.
 \item[Output:] documento con scopo documentale della codifica del software.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio documenti in input;
-\item stesura documentazione per ogni singola unità;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 355 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio documenti in input;
+	\item stesura documentazione per ogni singola unità;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 355 \euro{}
 \item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
@@ -382,16 +352,14 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:]database realizzato e pienamente funzionante.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio dei documenti in input;
-\item fase di codifica;
-\item verifica del codice e delle funzionalità del database;
-\item verifica della qualità;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio dei documenti in input;
+	\item fase di codifica;
+	\item verifica del codice e delle funzionalità del database;
+	\item verifica della qualità;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 575 \euro{}
 \item[Tempi di realizzazione:] 5 giorni lavorativi.
 \end{description}
@@ -402,16 +370,14 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:] codice dell'applicativo.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio dei documenti in input;
-\item fase di codifica;
-\item verifica del codice;
-\item verifica della qualità;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio dei documenti in input;
+	\item fase di codifica;
+	\item verifica del codice;
+	\item verifica della qualità;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 6755 \euro{}
 \item[Tempi di realizzazione:] 21 giorni lavorativi.
 \end{description}
@@ -422,20 +388,18 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] metodi pianificati nell'architettura di dettaglio del prodotto.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio documento in input;
-\item esecuzione dei test;
-\item risoluzione eventuali errori rilevati;
-\item approvazione dei test;
-\item stesura documento riassuntivo;
-\item verifica documento;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 990 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio documento in input;
+	\item esecuzione dei test;
+	\item risoluzione eventuali errori rilevati;
+	\item approvazione dei test;
+	\item stesura documento riassuntivo;
+	\item verifica documento;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 990 \euro{}
 \item[Tempi di realizzazione:] 21 giorni lavorativi.
 \end{description}
 
@@ -445,20 +409,18 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] componenti pianificati nella specifica tecnica del prodotto (progettazione di alto livello).
 \item[Output:] documento riassuntivo dei risultati ottenuti dalla batteria di test realizzati.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio documento in input;
-\item esecuzione dei test;
-\item risoluzione eventuali errori rilevati;
-\item approvazione dei test;
-\item stesura documento riassuntivo;
-\item verifica documento;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 1080 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio documento in input;
+	\item esecuzione dei test;
+	\item risoluzione eventuali errori rilevati;
+	\item approvazione dei test;
+	\item stesura documento riassuntivo;
+	\item verifica documento;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 1080 \euro{}
 \item[Tempi di realizzazione:] 18 giorni lavorativi.
 \end{description}
 
@@ -468,20 +430,18 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unità.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio documento Piano di Qualifica e accertamento risultati test di unità;
-\item esecuzione dei test;
-\item risoluzione eventuali errori rilevati;
-\item approvazione dei test;
-\item stesura documento riassuntivo;
-\item verifica documento;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 625 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio documento Piano di Qualifica e accertamento risultati test di unità;
+	\item esecuzione dei test;
+	\item risoluzione eventuali errori rilevati;
+	\item approvazione dei test;
+	\item stesura documento riassuntivo;
+	\item verifica documento;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 625 \euro{}
 \item[Tempi di realizzazione:] 2 giorni lavorativi.
 \end{description}
 
@@ -491,21 +451,19 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia grafica, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio documenti in input;
-\item esecuzione di test di sistema previo utilizzo;
-\item risoluzione eventuali errori rilevati;
-\item approvazione dei test;
-\item controllo dei requisiti soddisfatti;
-\item stesura documento riassuntivo;
-\item verifica documento;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
-\item[Costo:] 315 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio documenti in input;
+	\item esecuzione di test di sistema previo utilizzo;
+	\item risoluzione eventuali errori rilevati;
+	\item approvazione dei test;
+	\item controllo dei requisiti soddisfatti;
+	\item stesura documento riassuntivo;
+	\item verifica documento;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
+\item[Costo:] 315 \euro{}
 \item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
 
@@ -515,16 +473,14 @@ alto livello del software.
 \item[Responsabile:] 
 \item[Input:] interfaccia prodotto.
 \item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item studio delle funzionalità del software;
-\item prima realizzazione manuale;
-\item verifica documento ed eventuali correzioni;
-\item formalizzazione documento;
-\item approvazione;
-\end{itemize}
-\end{center}
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item studio delle funzionalità del software;
+	\item prima realizzazione manuale;
+	\item verifica documento ed eventuali correzioni;
+	\item formalizzazione documento;
+	\item approvazione;
+	\end{itemize}
 \item[Costo:] 525 \euro{}
 \item[Tempi di realizzazione:] 4 giorni lavorativi.
 \end{description}
@@ -536,15 +492,13 @@ possibili bug del prodotto e problemi che si possono verificare con i clienti e 
 \item[Responsabile:] 
 \item[Input:] problema riguardante il software.
 \item[Output:] rilascio nuova versione, relazioni sui problemi incontrati e sulle soluzioni,
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item il servizio clienti è in contatto con il cliente per rilevare la
-soddisfazione del prodotto tramite interviste e questionari per fornire assistenza;
-\item progettisti e programmatori lavorano per risolvere eventuali problemi individuati;
-\end{itemize}
-\end{center}
-\item[Costo:] 3610 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item il servizio clienti è in contatto con il cliente per rilevare la
+	soddisfazione del prodotto tramite interviste e questionari per fornire assistenza;
+	\item progettisti e programmatori lavorano per risolvere eventuali problemi individuati;
+	\end{itemize}
+\item[Costo:] 3610 \euro{}
 \item[Tempi di realizzazione:] 47 giorni lavorativi.
 \end{description}
 
@@ -554,14 +508,12 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 \item[Responsabile:] 
 \item[Input:] alcune conoscenze di marketing e target clienti.
 \item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item ricerca possibili clienti;
-\item pubblicità rivolta alla categorie di clienti scelti;
-\end{itemize}
-\end{center}
-\item[Costo:] 730 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item ricerca possibili clienti;
+	\item pubblicità rivolta alla categorie di clienti scelti;
+	\end{itemize}
+\item[Costo:] 730 \euro{}
 \item[Tempi di realizzazione:] 11 giorni lavorativi.
 \end{description}
 
@@ -571,13 +523,11 @@ soddisfazione del prodotto tramite interviste e questionari per fornire assisten
 \item[Responsabile:] 
 \item[Input:] software completato.
 \item[Output:] incremento delle conoscenze del prodotto stesso e del team a possibili acquirenti e investitori. 
-\item[Attività:] 
-\begin{center}
-\begin{itemize}
-\item dimostrazione dell'utilità del prodotto;
-\item raccolta feedback.
-\end{itemize}
-\end{center}
-\item[Costo:] 315 \euro{}.
+\item[Attività:]\mbox{}\\[-1.5\baselineskip]
+	\begin{itemize}
+	\item dimostrazione dell'utilità del prodotto;
+	\item raccolta feedback.
+	\end{itemize}
+\item[Costo:] 315 \euro{}
 \item[Tempi di realizzazione:] 1 giorno lavorativo.
 \end{description}
