--- a/template/config.tex
+++ b/template/config.tex
@@ -13,7 +13,7 @@
 \def\EMAIL			{malla5.sgp@gmail.com}
 
 
-\def\LOGO			{../template/img/logo.png}
+\def\LOGO			{../template/img/loghi/logoM4Y.png}
 \def\INTESTAZIONE	{../template/img/intestazione.png}
 \def\PIEDIPAGINA	{../template/img/piedipagina.png}
 
