--- a/template/structure.tex
+++ b/template/structure.tex
@@ -150,7 +150,7 @@
 \fancypagestyle{firststyle}
 {
     \fancyhf{}
-    \fancyhead[CE,CO]{\includegraphics[clip=true, height=2cm] {../template/img/logo_title.png}}
+    \fancyhead[CE,CO]{\includegraphics[clip=true, height=3.5cm] {../template/img/loghi/logoGruppoBlu.png}}
 }
 
 %no indentazione paragrafo
@@ -176,8 +176,9 @@
 %**PRIMA PAGINA***************************
 
 \begin{document}
-%Prima pagina senza intestazione né piè di pagina									
+%Prima pagina senza intestazione né piè di pagina
 \thispagestyle{firststyle}
+
 %
 %Centra il testo
 \begin{center}
@@ -187,18 +188,18 @@
 %\Huge{\textbf{\TITLE}} \\\Large{\textbf{\SUBTITLE}}
 %
 %Linea sotto il nome del capitolato
-\rule{\textwidth}{0.2mm}	
+\rule{\textwidth}{0mm}	
  
 %Spazio verticale
-\vspace{2cm}
+\vspace{3cm}
 
 %Inserimento logo
 %\includegraphics[trim=0.5cm 3cm 0.5cm 3cm, clip=true, width=0.8\textwidth] {\LOGO}
-\includegraphics[clip=true, height=7cm] {\LOGO}
+\includegraphics[clip=true, height=11cm] {\LOGO}
 
 %Spazio verticale
 
-\vspace{0.7cm}
+\vspace{1cm}
 
 \Huge{\textbf{\DOCUMENTO}}
 
@@ -220,8 +221,8 @@
 
 \vspace{0.5cm}
 %Descrizione del documento
- \textbf{Descrizione} \\
-\DESCRIZIONE
+%\textbf{Descrizione} \\
+%\DESCRIZIONE
 
 %Fine zona centrata
 \end{center}
