risolto problemi compilazione

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -75,6 +75,8 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 	\item approvazione;
 	\end{itemize}
 \item[Costo:] 270 \euro{}
+\item[Tempi di realizzazione:] 3 giorni lavorativi.
+\end{description}
 
 \paragraph{Definizione delle funzionalit\`{a} d'uso (1.1.2)}
 \begin{description}
