Caricato nuovi screenshot Gantt e Attivita

--- a/PianoDiProgetto/sections/temporale.tex
+++ b/PianoDiProgetto/sections/temporale.tex
@@ -50,7 +50,7 @@ sommare i costi di mantenimento e hosting del servizio.
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/Attivita.jpg}
+\includegraphics[width=1\textwidth]{img/Attivitanuovo.jpg}
 \caption{Diagramma  Attivit\'a}
 \label{fig:Diagramma Attivit\'a}
 \end{center}
@@ -58,7 +58,7 @@ sommare i costi di mantenimento e hosting del servizio.
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=1\textwidth]{img/Gantt.jpg}
+\includegraphics[width=1\textwidth]{img/Ganttnuovo.jpg}
 \caption{Gantt Progetto}
 \label{fig:Gantt Progetto}
 \end{center}
